# AthenaOS

./: .gitignore  ARCHITECTURE.md  AthenaOS.txt  BUILD.md  CAPABILITIES.md  Cargo.toml  MVP_COMPLETE.md  MVP_STATUS.md  NEXT_STEPS.md  PROJECT_STATUS.md  QUICKSTART.md  README.md  TODO_FIX.md
athena-agents/: Cargo.toml
athena-agents/src/: agent.rs  lib.rs  metadata.rs  runtime.rs
athena-agents/src/agents/: email_importer.rs  file_watcher.rs  mod.rs  web_clipper.rs
athena-api/: Cargo.toml
athena-api/src/: handlers.rs  lib.rs  routes.rs  server.rs
athena-cli/: Cargo.toml
athena-cli/src/: main.rs
athena-core/: Cargo.toml
athena-core/src/: config.rs  importers.rs  lib.rs  system.rs
athena-graph/: Cargo.toml
athena-graph/src/: engine.rs  entity.rs  lib.rs  query.rs  storage.rs  version.rs
athena-security/: Cargo.toml
athena-security/src/: crypto.rs  key_manager.rs  lib.rs  permissions.rs
athena-sync/: Cargo.toml
athena-sync/src/: crdt.rs  lib.rs  p2p.rs  protocol.rs
frontend/: index.html  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  graph.ts
frontend/src/components/: Layout.css  Layout.tsx
frontend/src/pages/: Agents.css  Agents.tsx  Dashboard.css  Dashboard.tsx  GraphView.css  GraphView.tsx  NoteEditor.css  NoteEditor.tsx
