[workspace]
members = [
    "athena-core",
    "athena-graph",
    "athena-security",
    "athena-agents",
    "athena-sync",
    "athena-api",
    "athena-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Athena OS Team"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cbor = "0.5"
bincode = "1.3"

# Cryptography
ed25519-dalek = "2.1"
x25519-dalek = "2.0"
chacha20poly1305 = "0.10"
aes-gcm = "0.10"
sha2 = "0.10"
rand = "0.8"

# Database
rocksdb = "0.21"
sled = "0.34"

# Graph and RDF
oxigraph = "0.4"
spargebra = "0.1"

# P2P
libp2p = { version = "0.53", features = ["full"] }

# WASM
wasmtime = "15.0"
wasmer = "4.2"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
bytes = "1.5"

# HTTP/API
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = "1.0"
reqwest = { version = "0.11", features = ["json"] }

# Compression
zstd = "0.13"

# Config
toml = "0.8"
config = "0.14"

