[package]
name = "athena-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "athena"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

athena-core = { path = "../athena-core" }
athena-api = { path = "../athena-api" }

