[package]
name = "athena-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }

athena-graph = { path = "../athena-graph" }
athena-security = { path = "../athena-security" }
athena-agents = { path = "../athena-agents" }
athena-sync = { path = "../athena-sync" }
dirs = "5.0"
toml = { workspace = true }

