[package]
name = "athena-graph"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
cbor = { workspace = true }
bincode = { workspace = true }
rocksdb = { workspace = true }
sled = { workspace = true }
oxigraph = { workspace = true }
spargebra = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
zstd = { workspace = true }
sha2 = { workspace = true }

athena-security = { path = "../athena-security" }

